Fix some layout issues

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,17 +1,100 @@
+/*default document styles*/
 html > body {
     font-family: 'Roboto', sans-serif;
 }
 
-/*.btn {*/
-/*    padding: 5px 25px;*/
-/*    border-width: 2px;*/
-/*}*/
+#content {
+    max-width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+.content p {
+    max-width: 700px;
+    text-align: justify;
+}
+
+@media only screen and (max-width: 1024px) {
+    #content {
+        width:100%;
+    }
+}
+
+
+/*default header styles*/
+a.navigation__link {
+    opacity: 0.7;
+    font-weight: 600;
+}
+
+a.navigation__link:hover {
+    opacity: 1;
+}
+
+div.header-row {
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0;
+}
+
+.site-logo {
+    line-height: 100%;
+    height: 55px;
+    width: auto;
+}
+
+
+@media only screen and (max-width: 1024px) {
+    
+    div.header-row {
+        width: 100%;
+    }
+    
+    header > .site-logo {
+        margin-left: 48px;
+        height: 45px;
+    }
+}
+
+/*default footer styles*/
+footer.mdl-mini-footer.default-footer {
+    padding:20px 20px;
+}
+
+
+/* card layout elements */
+
+.mdl-card__title {
+    background: #ECEFF1;
+    /*background: url("/img/logo.svg") no-repeat;*/
+}
+
+.section-title, .mdl-card__title.section-title {
+    font-weight: 100;
+    font-size: 1.8em;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+@media only screen and (max-width: 1024px) {
+    .section-title {
+        margin-top: 0px;
+        margin-bottom: 0px;
+        font-size:1.5em;
+    }    
+}
+
+/*default elements styles*/
 
 .mdl-button.btn-primary {
     color: #63ba5f;
     background: #FFF;
     border-color: #63ba5f;
-    border: 2px solid #63ba5f;
+    border: 3px solid #63ba5f;
+    border-radius: 3px;
 }
 
 .mdl-button.btn-primary:hover {
@@ -25,31 +108,10 @@ html > body {
 }
 
 
-/*.btn-link {*/
-/*    text-decoration: none;*/
-/*}*/
-
-@media (max-width: 1024px) {
-  div.header-row {
-    width: 100% !important;
-  }
-}
 
 
-div.header-row {
-    width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 0;
-}
 
-#content {
-    max-width: 1000px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 10px;
-    padding-right: 10px;
-}
+
 
 .language-selector {
     position: absolute;
@@ -57,41 +119,23 @@ div.header-row {
     right: 0;
 }
 
-a.navigation__link {
-    /*border-right: solid #eaeaea 1px;*/
-    /*border-left: solid #eaeaea 1px;*/
-    opacity: 0.7;
-    font-weight: 600;
-}
 
-a.navigation__link:hover {
-    opacity: 1;
-}
+
+
 
 .card-layout__card.mdl-card {
     width: 90%;
 }
 
-.mdl-card__title {
-    background: #ECEFF1;
-    /*background: url("/img/logo.svg") no-repeat;*/
-}
 
-.content p {
-    max-width: 700px;
-    text-align: justify;
-}
+
+
 
 .g-recaptcha{
     margin-bottom: 20px;
 }
 
-.section-title, .mdl-card__title.section-title {
-    font-weight: 100;
-    font-size: 34px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
+
 
 form .mdl-textfield{
     width:100%;
@@ -100,20 +144,4 @@ form .mdl-textfield{
 form .mdl-button.submit-button{
     width: 200px;
     /*background: #29B6F6;*/
-}
-
-@media (max-width: 1024px) {
-  .site-logo {
-    margin-left: 48px;
-    height: 56px !important;
-  }
-}
-
-.site-logo {
-    line-height: 100%;
-    height: 64px;
-    width: auto;
-    /*padding: 1px 10px 0 45px !important;*/
-    /*background: url("/img/logo.svg") no-repeat;*/
-    /*background-size: 64px;*/
 }
